# code-rag-server

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/code_rag_server/: cli.py  embeddings.py  server.py  vector_store.py
tests/: __init__.py  conftest.py  test_cli.py  test_embeddings.py  test_server.py  test_vector_store.py
