[project]
name = "code-rag-server"
version = "0.1.0"
description = "Chat with your code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.1",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "tree-sitter>=0.20.1",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[[project.authors]]
name = "Willy Bruhn"
email = "willy.bruhn@otto.de"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
code-rag-index = "code_rag_server.cli:cli"
code-rag-server = "code_rag_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=code_rag_server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m not run_with_lm_studio"
]
markers = [
    "run_with_lm_studio: mark test to run only with LM Studio"
]

[tool.coverage.run]
source = ["code_rag_server"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
fail_under = 70

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
implicit_optional = true
exclude = [
    'github_repos/.*',
    'build/.*',
    'dist/.*',
    'tests/.*'  # Exclude test files
]

[[tool.mypy.overrides]]
module = ["tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["code_rag_server.*"]
disable_error_code = ["no-untyped-def", "arg-type", "return-value"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "github_repos",
    "indices"
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
